--- a/build.gradle
+++ b/build.gradle
@@ -25,16 +25,17 @@ task clean(type: Delete) {
 
 ext {
     //dependencies version
-    appCompatVersion = '1.2.0'
-    coreVersion = '1.3.2'
-    constraintLayoutVersion = '2.0.4'
-    junitVersion = '4.13.1'
-    junitExtversion = '1.1.2'
-    espressoVersion = '3.3.0'
     androidTestVersion = '1.3.0'
     androidXTestVersion = '1.3.0'
-
+    appCompatVersion = '1.2.0'
+    archLifecycleVersion = '2.2.0'
+    constraintLayoutVersion = '2.0.4'
+    coreVersion = '1.3.2'
+    espressoVersion = '3.3.0'
+    junitExtversion = '1.1.2'
+    junitVersion = '4.13.2'
+    glideVersion = '4.12.0'
     materialVersion = '1.3.0'
+    mockitoVersion = '3.6.0'
     recyclerViewVersion = '1.1.0'
-    glideVersion = '4.11.0'
 }
