--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ ext {
     junitExtversion = '1.1.2'
     junitVersion = '4.13.2'
     glideVersion = '4.12.0'
+    idleResourceVersion = '3.3.0'
     materialVersion = '1.3.0'
     mockitoVersion = '3.6.0'
     recyclerViewVersion = '1.1.0'
